colored-app-canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-app
  namespace: color-app-canary
spec:
  selector:
    app: color-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
