colored-app-canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-app-ingress
  namespace: color-app-canary
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: color.brexit4u.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: color-app
                port:
                  number: 80
